Aula 24 - Criação dos Elementos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidFestaFimDeAnoUdemy</string>
+    <string name="hoje">Hoje</string>
+    <string name="dias_restantes_para_o_fim_do_ano">Dias Restantes para o Fim do Ano</string>
+    <string name="voc_vai_participar">você vai participar?</string>
 </resources>
