Aula 28 - Passando dados entre activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="hoje">Hoje</string>
     <string name="dias_restantes_para_o_fim_do_ano">Dias Restantes para o Fim do Ano</string>
     <string name="voc_vai_participar">você vai participar?</string>
+    <string name="nao_confirmado">Não Confirmado</string>
+    <string name="sim">Sim</string>
+    <string name="nao">Não</string>
 </resources>
